# cicpy

./: CLAUDE.md  LICENSE  Makefile  README.md  cic.py  cicpy.code-workspace  cicsim.py  pyproject.toml  setup.py  t_design.py
.github/workflows/: main.yml  release.yml
cicpy/: __init__.py  cic.py  cicpy.py
cicpy/ckt/: __init__.py  cktinstance.py  cktobject.py  device.py  spiceparser.py  subckt.py
cicpy/core/: __init__.py  cell.py  design.py  instance.py  layoutcell.py  point.py  port.py  rect.py  rules.py  text.py
cicpy/eda/: __init__.py  cellfactory.py  magic.py  xschem.py
cicpy/orc/: orcfile.py
cicpy/place/: diffpair.py  placer.py
cicpy/printer/: __init__.py  designprinter.py  magicprinter.py  mcprinter.py  skilllayprinter.py  skillschprinter.py  spiceprinter.py  svgprinter.py  verilogprinter.py  xschemprinter.py
cicpy/sim/: conf.py  spectrewriter.py
docs/: Gemfile  _config.yml  gui.md  gui_plan.md  index.md  jcell.md  minecraft.md  pycell.md  routes.md  sch2mag.md  svg.md  transpile.md
src/cicpy/: __init__.py  cic.py  groups.py
test/: Makefile
test/jcell/: Makefile
test/minecraft/: Makefile
test/place/: Makefile  diffpair.csv  layout.csv
test/svg/: Makefile
test/transpile/: Makefile  demo.tech
tests/: Makefile  gendoc.py
tests/filter/: Makefile  filter.md
tests/index/: Makefile  index.md
tests/jcell/: Makefile  jcell.md
tests/minecraft/: Makefile  minecraft.md
tests/orc/: Makefile  demo.json  demo.spi  orc.md
tests/place/: Makefile  horz.csv  place.md
tests/routes/: Makefile  README.md  build_route_examples.py  route_examples.spi  routes.md
tests/sch2mag/: Makefile  sch2mag.md
tests/spi2mag/: Makefile  spi2mag.md
tests/stackgroups/: Makefile  test_stackgroups.py
tests/svg/: Makefile  svg.md
tests/transpile/: Makefile  demo.tech  transpile.md
xschem/: SARCMP.sym  and.sym  border_s.sym  cap.sym  dfqn.sym  dfqrn.sym  inv.sym  nand.sym  nch.sym  nor.sym  or.sym  pch.sym  res.sym  tieh.sym  tiel.sym
xschem/cic/: SARCMP.sym  and.sym  bf.sym  border_s.sym  cap.sym  dfqn.sym  dfqrn.sym  iv.sym  nand.sym  nch.sym  nr.sym  or.sym  pch.sym  tieh.sym  tiel.sym
(+64 files in other folders)
