[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cicpy"
version = "0.1.7"
authors = [
  { name="Carsten Wulff", email="carsten@wulff.no" },
]
description = "Custom IC Creator Python Frontend"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/wulffern/cicpy"
"Bug Tracker" = "https://github.com/wulffern/cicpy/issues"
